--- a/conf/application.conf
+++ b/conf/application.conf
@@ -313,8 +313,12 @@ play.evolutions {
 play.db {
   # The combination of these two settings results in "db.default" as the
   # default JDBC pool:
-  #config = "db"
-  #default = "default"
+  config = "db"
+  default = "default"
+  url = "jdbc:h2:mem:base"
+  ebean.default="models.*"
+
+  ebean.product="models.Product"
 
   # Play uses HikariCP as the default connection pool.  You can override
   # settings by changing the prototype:
@@ -343,7 +347,7 @@ db {
 
   # https://www.playframework.com/documentation/latest/Developing-with-the-H2-Database
   default.driver = org.h2.Driver
-  default.url = "jdbc:h2:mem:play"
+  default.url = "jdbc:h2:mem:base"
   default.username = sa
   default.password = ""
 
